--- a/styles/my_style.css
+++ b/styles/my_style.css
@@ -4,3 +4,14 @@ body{
 	font-family: verdana;
 	font-size: 10px;
 }
+
+h1{
+    font-size: 16px;
+    color: white;
+}
+
+h2{
+    font-size: 160x; 
+    color: white;
+    float: right;
+}
