--- a/styles/my_style.css
+++ b/styles/my_style.css
@@ -25,7 +25,7 @@ h1{
     margin-left: 120px;
 }
 
-.img{
+.content_box0{
     padding: 20px;
     margin: 5px;
     padding-bottom: 10px;
@@ -64,19 +64,43 @@ img{
         padding-bottom: 10px;
     }
     
-    .img{
-        margin-left: 200px;
-        margin-right: 190px;
-        padding: 10px;
+    .content{
+    width: 100%;
+    display:grid; 
+    grid-template-columns: 1fr 1fr;
+    grid-auto-rows: minmax(100px, auto);    
+    grid-column-gap: 5px;
+    grid-row-gap: 5px;
+    justify-items: center;
+    align-items: center;    
     }
     
-    .content{
-        
-        display: flex;
-        flex-flow: row wrap;/*flex direction en flex wrap*/
-        align-items: center;
-        justify-content:flex-start;/*alle boxes in het midden van de webpagina*/
+    .content_box0{
+        grid-column: 1;
+        grid-row: 1;
     }
+    
+    .content_box1{
+        grid-column: 2;
+        grid-row: 1;
+    }
+    
+    .content_box2{
+        grid-column:1;
+        grid-row: 2;
+    }
+    
+    .content_box3{
+        grid-column: 2;
+        grid-row: 2;
+    }
+    
+    .content_box4{
+        grid-column:1;
+        grid-row: 3;
+    }
+    
+}
     .content_box1, .content_box2, .content_box3, .content_box4{
         width: 350px;
         height: 250px;
@@ -88,35 +112,87 @@ img{
 }
 
 @media screen and (min-width:1000px){
-    .logo{
-        grid-area: logo
+    body{
+        margin: 10px;
+        padding: 10px;
     }
-    .img{
-        grid-area: image
+    .content{
+    width: 100%;
+    display:grid; 
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-auto-rows: minmax(100px, auto);    
+    grid-column-gap: 2px;
+    grid-row-gap: 2px;
+    justify-items: center;
+    align-items: center;    
+    }
+    
+    .content_box0{
+        grid-column: 2/3;
+        grid-row: 1;
     }
     
     .content_box1{
-        grid-area: box1
+        grid-column: 1;
+        grid-row: 1;
     }
     
     .content_box2{
-        grid-area: box2
+        grid-column:3;
+        grid-row: 1;
     }
     
     .content_box3{
-        grid-area: box3
+        grid-column: 1/2;
+        grid-row: 2;
     }
     
     .content_box4{
-        grid-area: box4
+        grid-column:3;
+        grid-row: 2;
     }
     
-    .content, .titel, .img{
+}
+
+@media screen and (min-width:1300px){
+    body{
+        margin: 10px;
+        padding: 10px;
+    }
+    .content{
+    width: 100%;
     display:grid; 
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 40px 300px 300px;
-    grid-column-gap: 10px;
-        
+    grid-auto-rows: minmax(100px, auto);    
+    grid-column-gap: 2px;
+    grid-row-gap: 2px;
+    justify-items: center;
+    align-items: center;    
+    }
+    
+    .content_box0{
+        grid-column: 2/3;
+        grid-row: 1;
+    }
+    
+    .content_box1{
+        grid-column: 1;
+        grid-row: 1;
+    }
+    
+    .content_box2{
+        grid-column:3;
+        grid-row: 1;
+    }
+    
+    .content_box3{
+        grid-column: 1/2;
+        grid-row: 2;
+    }
+    
+    .content_box4{
+        grid-column:3;
+        grid-row: 2;
     }
     
 }
