--- a/styles/my_style.css
+++ b/styles/my_style.css
@@ -31,8 +31,12 @@ h1{
     padding-bottom: 10px;
 }
 
-img{
+.img{
     width: 300px;
+    position: relative;
+    border: 1px solid #000;
+    border-radius: 120%;
+    box-shadow: -20px -20px 50px 2px orange inset, 0 0 20px 2px orange;
 }
 
 
